--- a/cliente/index.html
+++ b/cliente/index.html
@@ -7,7 +7,7 @@
     <title>SBK4</title>
   
   </head>
-  <body>
+  <body style="background-color: rgb(230, 230, 230);">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
